fixed grid on mobile

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -49,14 +49,14 @@ span.light { font-weight: 100; }
 }
 
 .ctas {
-  margin: 7% 0;
+  margin: 5% 0;
   width: 100%;
 
   .cta-intro {
     display: grid;
     grid-template-columns: 90px 2fr;
-    grid-template-rows: 75px;
-    grid-template:
+    grid-template-rows: 70px;
+    grid-template-areas:
       "pic headline";
     border-radius: 20px;
     background: #444;
@@ -66,6 +66,7 @@ span.light { font-weight: 100; }
       grid-area: headline;
       margin-bottom: 0;
       align-self: center;
+      justify-self: start;
     }
   }
 
@@ -84,6 +85,7 @@ span.light { font-weight: 100; }
     grid-area: pic;
     align-self: center;
     justify-self: center;
+    // width: 60px;
   }
 
   p {
